--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>MyPortfolioSSR</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/images/logo/logo1.png">
       <!-- CSS (Font, Vendor, Icon, Plugins & Style CSS files) -->
 
     <!-- Font CSS -->
@@ -62,5 +62,30 @@
         })();
         </script>
         <!--End of Tawk.to Script-->
+
+        <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Chinemerem Cyril",
+  "jobTitle": "Full Stack Software Engineer",
+  "url": "https://www.yourdomain.com",
+  "sameAs": [
+    "https://github.com/chinemerem2525",
+    "https://www.linkedin.com/in/chinemerem-cyril",
+    "https://www.tiktok.com/@c_hub_solutions?_t=ZM-8xrxUr0Jm2q&_r=1",
+    "https://www.instagram.com/c_hub_solutions?igsh=d2cyc2xwbHdicDRn&utm_source=qr"
+  ],
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Freelance"
+  },
+  "alumniOf": "Federal University of Technology, Owerri",
+  "knowsAbout": [
+    "Angular", "Node.js", "Express.js", "MongoDB", "Javascripit", "HTML", "CSS", "Bootstrap", "Postman", "VS code", "Firebase", "REST APIs", "Frontend Development", "Backend Development", "Web Performance", "Web Development", 
+  ]
+}
+</script>
+
 </body>
 </html>
