--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,14 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="./assets/css/pages/home.css">
 
+    <!-- Google Tag Manager -->
+      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-TTLMBFTV');</script>
+    <!-- End Google Tag Manager -->
+
 </head>
 <body>
 
@@ -60,9 +68,10 @@
         s1.setAttribute('crossorigin','*');
         s0.parentNode.insertBefore(s1,s0);
         })();
-        </script>
-        <!--End of Tawk.to Script-->
+      </script>
+     <!--End of Tawk.to Script-->
 
+     <!-- Structured Data Starts -->
         <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -82,10 +91,16 @@
   },
   "alumniOf": "Federal University of Technology, Owerri",
   "knowsAbout": [
-    "Angular", "Node.js", "Express.js", "MongoDB", "Javascripit", "HTML", "CSS", "Bootstrap", "Postman", "VS code", "Firebase", "REST APIs", "Frontend Development", "Backend Development", "Web Performance", "Web Development", 
+    "Angular", "Node.js", "Express.js", "MongoDB", "Javascripit", "HTML", "CSS", "Bootstrap", "Postman", "VS code", "Firebase", "REST APIs", "Frontend Development", "Backend Development", "Web Performance", "Web Development",
   ]
 }
-</script>
+        </script>
+      <!-- Structured Data Ends -->
+
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTLMBFTV"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
 </body>
 </html>
