--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/images/logo/new-logo.png">
       <!-- CSS (Font, Vendor, Icon, Plugins & Style CSS files) -->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+  integrity="sha512-dUWyXv5AE+LkqzROtv1bTjRzHzFnFi4IehG9NzV1UGvfCDNEp1g7aYMF8ZZWZ8rkZ+bFqWZKTQJZ9ThUnr4wAw=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/>
+
+
 
     <!-- Font CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
