--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
   "@type": "Person",
   "name": "Chinemerem Cyril",
   "jobTitle": "Full Stack Software Engineer",
-  "url": "https://www.yourdomain.com",
+  "url": "https://chinemeremofficial.com",
   "sameAs": [
     "https://github.com/chinemerem2525",
     "https://www.linkedin.com/in/chinemerem-cyril",
