--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
   referrerpolicy="no-referrer"
 />
 
+<link rel="sitemap" type="application/xml" title="Sitemap" href="./assets/sitemap.xml">
+
+<link rel="alternate" type="text/plain" title="LLMs" href="./assets/llms.txt">
 
 
     <!-- Font CSS -->
