New-Production-Changes

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Chinemerem Cyril Portfolio</title>
-  <base href="">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/images/logo/new-logo.png">
       <!-- CSS (Font, Vendor, Icon, Plugins & Style CSS files) -->
@@ -83,30 +83,152 @@
       </script>
      <!--End of Tawk.to Script-->
 
+
      <!-- Structured Data Starts -->
-        <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Person",
-  "name": "Chinemerem Cyril",
-  "jobTitle": "Full Stack Software Engineer",
-  "url": "https://chinemeremofficial.com",
-  "sameAs": [
-    "https://github.com/chinemerem2525",
-    "https://www.linkedin.com/in/chinemerem-cyril",
-    "https://www.tiktok.com/@c_hub_solutions?_t=ZM-8xrxUr0Jm2q&_r=1",
-    "https://www.instagram.com/c_hub_solutions?igsh=d2cyc2xwbHdicDRn&utm_source=qr"
-  ],
-  "worksFor": {
-    "@type": "Organization",
-    "name": "Freelance"
+<script type="application/ld+json">
+[
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Chinemerem Cyril Portfolio",
+    "url": "https://chinemeremofficial.com",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://chinemeremofficial.com/?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
   },
-  "alumniOf": "Federal University of Technology, Owerri",
-  "knowsAbout": [
-    "Angular", "Node.js", "Express.js", "MongoDB", "Javascripit", "HTML", "CSS", "Bootstrap", "Postman", "VS code", "Firebase", "REST APIs", "Frontend Development", "Backend Development", "Web Performance", "Web Development",
-  ]
-}
-        </script>
+   {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Chinemerem Official",
+    "url": "https://chinemeremofficial.com",
+    "logo": "https://chinemeremofficial.com/assets/img/profile/chinemerem-cyril-og.png",
+    "sameAs": [
+      "https://github.com/chinemerem2525",
+      "https://www.linkedin.com/in/chinemerem-cyril",
+      "https://www.tiktok.com/@c_hub_solutions",
+      "https://www.instagram.com/c_hub_solutions"
+    ],
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "email": "chinemeremc25@gmail.com",
+      "contactType": "Customer Support",
+      "areaServed": "NG",
+      "availableLanguage": ["English"]
+    }
+  },
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Chinemerem Cyril",
+    "jobTitle": "Full Stack Software Engineer",
+    "url": "https://chinemeremofficial.com",
+    "sameAs": [
+      "https://github.com/chinemerem2525",
+      "https://www.linkedin.com/in/chinemerem-cyril",
+      "https://www.tiktok.com/@c_hub_solutions",
+      "https://www.instagram.com/c_hub_solutions"
+    ],
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Chinemerem Official"
+    },
+    "alumniOf": {
+      "@type": "EducationalOrganization",
+      "name": "Federal University of Technology, Owerri"
+    },
+    "knowsAbout": [
+      "Angular", "Node.js", "Express.js", "MongoDB", "JavaScript", "HTML", "CSS",
+      "Bootstrap", "Postman", "VS Code", "Firebase", "REST APIs",
+      "Frontend Development", "Backend Development", "Web Performance", "Web Development"
+    ]
+  },
+  {
+    "@context": "https://schema.org",
+    "@type": "ProfessionalService",
+    "name": "Chinemerem Official",
+    "url": "https://chinemeremofficial.com",
+     "telephone": "+2348167482198",
+     "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "53 Ojeva Street, Tedi, Ojo, Lagos.",
+    "addressLocality": "Lagos",
+    "addressRegion": "LA",
+    "postalCode": "102101",
+    "addressCountry": "NG"
+  },
+    "logo": "https://chinemeremofficial.com/assets/img/profile/chinemerem-cyril-og.png",
+    "description": "From concept through to flawless launch, I create web experiences that elevate brands, engage users, and drive results. By combining pixel-perfect front-end design with scalable, secure back-end systems, I help businesses build websites and web applications that perform as beautifully as they look. Run by certified software engineer Chinemerem Cyril.",
+    "areaServed": "NG",
+    "serviceType": [
+      "Website Development",
+      "Full Stack Development",
+      "Frontend Development",
+      "Backend Development",
+      "SEO Optimization",
+      "Website Maintenance",
+      "Hosting And Security"
+    ],
+    "provider": {
+      "@type": "Person",
+      "name": "Chinemerem Cyril"
+    }
+  },
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "How can I contact you and quickly get a quote for my new website?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "You can contact me via the contact form on the website or email me directly. I typically respond within 24 hours with a quote based on your requirements."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How long does it take you to build a website?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "As soon as possible. The timeline depends on the type of website and the features you would like to include. While the time frame varies for each project, rest assured that we will deliver within the agreed deadline."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is there maintenance fee after the website is launched?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, it is a paid service that covers expenses such as website maintenance and hosting. Payment will be made at the end of each month."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I make a change or correction to the new project?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Absolutely. However, this will take place before it goes live. You will receive the new website for testing and to make any necessary corrections before it goes live or is hosted."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What's your preferred method of payment and do you need an advance?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "My preferred method of payment is an initial deposit of 70% before the job begins, followed by the remaining balance upon completion. This ensures both parties are committed to the project and allows me to allocate resources effectively from the start."
+        }
+      }
+    ]
+  }
+]
+</script>
+
+
+
+      <!-- Structured Data Ends -->
+
+
       <!-- Structured Data Ends -->
 
   <!-- Google Tag Manager (noscript) -->
